Fix alignment

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -39,10 +39,10 @@ $button-border-height: 3px;
 
   &--search {
     .svg-icon {
-      height: 22px;
+      height: 21px;
       margin: 0;
       vertical-align: top;
-      width: 22px;
+      width: 21px;
     }
   }
 
